# unitree-qmini-robot-components

./: .gitignore  BOM.xlsx  Qmini Printing Hours.xlsx  README.md  Unitree Qmini V1.0.step  ~$Qmini Printing Hours.xlsx
Body/: Battery Pack.stl  Frame Front Bottom.stl  Frame Top.step  Frame Top.stl  IMU N100 Mount.stl  Jetson Orin Nano Mount A.stl  Jetson Orin Nano Mount B.stl  Neck Actuator Mount.stl  Raspberry Pi 4B Mount.stl  Yaw Top.stl
Foot/: Left Foot A.stl  Left Foot B.stl  Right Foot A.stl  Right Foot B.stl
Hip/: Hip Gear (Mirror this).stl  Hip Gear Right.stl  Hip Joint Mount Left.stl  Hip Joint Mount Right.stl  Hip Joint Roll Left.stl  Hip Joint Roll Right.step  Hip Joint Roll Right.stl  Hip Joint Yaw Right.stl  Hip Joint Yaw.stl
Left Leg/: Left Foot A.stl  Left Foot B.stl  Lower Leg Left Cover.stl  Lower Leg Left.stl
Leg/: Hollow - Lower Leg Left Cover.stl  Hollow - Lower Leg Right Cover.stl  Lower Leg Right Cover.stl  Lower Leg Right.stl
Panel/: Antenna Left.step  Antenna Right.step  Panel Front.stl  Panel Top.stl
Panel/Bambu Studio/: Panel Top Rear.3mf
Standing Frame/: Left Foot Holder.3mf  Main Frame.3mf  Right Foot Holder.3mf  Standing Frame A.stl  Standing Frame B.stl
Yaw/: Yaw Bottom Limit.stl  Yaw Top.stl
qmini_description/: CMakeLists.txt  Qmini.urdf  convert.py  package.xml  setup.py
qmini_description/launch/: view_qmini.launch.py
qmini_description/meshes/: LL_hip_pitch.STL  LL_hip_roll.STL  LL_knee.STL  RL_hip_pitch.STL  RL_hip_roll.STL  RL_knee.STL
urdf/: Qmini.urdf  converted_robot.xml  qmini.xml
urdf/meshes/: LL_ankle.STL  (+3 more)
(+2 files in other folders)
