<?xml version="1.0"?>
<package format="3">
    <name>qmini_description</name>
    <version>0.0.1</version>
    <description>URDF for the Unitree Qmini robot.</description>
    <maintainer email="you@email.com">Tony Wang</maintainer>
    <license>MIT</license>
    <buildtool_depend>ament_cmake</buildtool_depend>
    <exec_depend>joint_state_publisher_gui</exec_depend>
    <exec_depend>robot_state_publisher</exec_depend>
    <exec_depend>rviz2</exec_depend>
    <exec_depend>ros2launch</exec_depend>
    <export>
        <build_type>ament_cmake</build_type>
    </export>
</package>
